--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.1'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "com.android.support:support-compat:28.0.0"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
